--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Ciudad Real Tech Hub
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la
+    provincia.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://ciudadrealtechhub.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
