--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,55 @@
 baseURL = "ciudadrealtechhub.github.io"
-languageCode = "en-us"
+languageCode = "es-es"
 title = "Ciudad Real Tech Hub"
 theme = "ananke"
+
+DefaultContentLanguage = "es"
+SectionPagesMenu = "main"
+Paginate = 10
+googleAnalytics = ""
+enableRobotsTXT = true
+
+[languages]
+  [languages.es]
+    title = "Ciudad Real Tech Hub"
+    weight = 1
+    contentDir = "content"
+#  [languages.en]
+#    title = "Ciudad Real Tech Hub"
+#    weight = 2
+#    contentDir = "content/en"
+
+[sitemap]
+  changefreq = "monthly"
+  priority = 0.5
+  filename = "sitemap.xml"
+
+[params]
+  favicon = ""
+  site_logo = ""
+  description = "Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia."
+  facebook = ""
+  twitter = ""
+  instagram = ""
+  youtube = ""
+  github = ""
+  gitlab = ""
+  linkedin = ""
+  mastodon = ""
+  slack = ""
+  stackoverflow = ""
+  rss = ""
+  # choose a background color from any on this page:
+  # http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  featured_image = "/images/crth.jpg"
+  recent_posts_number = 2
+
+[menu]
+[[menu.main]]
+  identifier = 'about'
+  name = 'about CRTH'
+  pre = "<i class='fa fa-heart'></i>"
+  url = '/about/'
+  weight = -110
+
