--- a/config.toml
+++ b/config.toml
@@ -50,8 +50,14 @@ enableRobotsTXT = true
   weight = 1
 
 [[menu.main]]
+  identifier = 'categories'
+  name = 'Categories'
+  url = '/categories/'
+  weight = 2
+
+[[menu.main]]
   identifier = 'grupos'
   name = 'Grupos'
   url = '/grupos/'
-  weight = 2
+  weight = 3
 
